# carbonledger

./: .env.example  .gitignore  .trivy.yaml  .trivyignore  AUDIT_SCOPE.md  CHANGELOG.md  CONTRIBUTING.md  DELIST_AUTHORIZATION_TEST.md  DOCUMENTATION_TEST_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_COMPLETE.md  INTEGRATION_TESTS_STATUS.md  METHODOLOGY_SCORING_RUBRIC.md  NEXT_STEPS.md  ONBOARDING_SUMMARY.md  PR_DESCRIPTION.txt  README.md  SECURITY.md  Stellar.toml  TESTING_SUMMARY.md  TEST_EXECUTION_REPORT.md  UPGRADE_TEST_README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  package-lock.json  renovate.json
contracts/: Cargo.toml
contracts/carbon_credit/: Cargo.toml
contracts/carbon_credit/src/: invariants.rs  lib.rs
contracts/carbon_credit/test_snapshots/tests/: test_get_retirement_certificate.1.json  test_mint_credits_success.1.json  test_partial_retirement_updates_status.1.json  test_retire_credits_permanent.1.json  test_retired_credits_cannot_be_retired_again.1.json  test_retired_credits_cannot_be_transferred.1.json  test_serial_conflict_detection.1.json  test_verify_serial_range_no_overlap.1.json  test_vintage_year_boundary_1989_fails.1.json  test_vintage_year_boundary_1990_succeeds.1.json  test_vintage_year_boundary_current_plus_1_succeeds.1.json  test_vintage_year_boundary_current_plus_2_fails.1.json  test_zero_amount_rejected.1.json
contracts/carbon_marketplace/: Cargo.toml
contracts/carbon_marketplace/proptest-regressions/: lib.txt
contracts/carbon_marketplace/src/: lib.rs
contracts/carbon_oracle/: Cargo.toml  fix_all.py  fix_tests.py
contracts/carbon_oracle/src/: lib.rs  scratch.rs
contracts/carbon_registry/: Cargo.toml
contracts/carbon_registry/src/: lib.rs
contracts/carbon_registry_v1/: Cargo.toml
contracts/carbon_registry_v1/src/: lib.rs
contracts/carbon_registry_v2/: Cargo.toml
contracts/carbon_registry_v2/src/: lib.rs
(+1285 files in other folders)
