[package]
name = "carbon_oracle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "20.5.0", features = ["alloc"] }

[dev-dependencies]
ed25519-dalek = "2"
rand = "0.8"
soroban-sdk = { version = "20.5.0", features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
